원화 현금의 값도 거래로 관리되도록 수정
